Henry Cavendish Densidad  Terrestre

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -613,8 +613,53 @@ los experimentos de Galvani probaron que en efecto el movimiento muscular es pro
 %\section{Conclusion}
 %The conclusion goes here.
 
+\section{Henry Canvendish: Densidad de la tierra}
 
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{Cavendish.jpg}
+  \caption{Henry Cavendish. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
+\subsection{Contexto Histórico}
+Henry Cavendish (1731-1810) fue un destacado físico y químico británico,
+ nacido en el Reino de Cerdeña en Francia, y uno de los mayores científicos de la historia.
+ Cavendish tuvo la suerte de obtener una gran herencia que le sirvió para financiar sus experimentos
+ y se le reconoce también el haber determinado la composición química del agua.
+ 
+ \subsection{El experimento}
+Uno de los mas famosos experimentos de Cavendish es el cálculo de la densidad terrestre, extraído directamente
+del interés de Cavendish en la ciencia Newtoniana.
+Sir Issac Newton había propuesto que todos los objetos en la Tierra son atraídos por la fuerza
+de gravedad. Esta fuerzza es proporcional al tamaño de la masa de los objetos y a la distancia entre ellos. Basícamente, esto implicaba 
+que entre mayor la masa de un objeto más fuerte la fuerza de atracción de este.
+Sin embargo, Newton dejó como incognitas la constante gravitacional y la masa terrestre. El encontrar cualquiera de estos valores permitía
+descubrir el otro mediante cálculos simples.
+
+Como se conocía que la constante gravitacional es la misma para todos los objetos, el método más lógico de resolver
+la incognita es midiendo la fuerza de atracción gravitacional entre dos objetos de masa conocida. Suena sencillo en teoría pero en la práctica
+los objetos de masa conocida son muy pequeños para que exista una fuerza de attraccion gravitacional medible.
+
+En la década de 1798 mediante el experimento de Cavendish, utilizando una balanza de torsión, se obtuvo la primera
+medida de la constante gravitacional de la Tierra, y consecuentemente la densidad del planeta Tierra con una precisión asombrosa para la época.
+El aparato construido por Cavendish, y colocado en un ambiente que eliminaba variables externas como el viento y la temperatura
+podía calcular la fuerza de atracción ejercida sobre dos bolas de plomo de igual masa, con un gran grado de exactitud.
+
+Utilizando este equipo Cavendish determinó que la densidad promedio
+terrestre era de aproximadamente 5,5 veces la del agua y estimó 
+la masa terrestre en $6,6 \times 10^{21}$
+toneladas muy cercano al valor aceptado en la actualidad de
+$5,97 \times 10^{24}$ kilogramos.\cite{shectman_2003}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=55mm]{cavendish2.jpg}
+  \caption{Balanza de torsión de Henry Canvendish. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+%6.6 \times 10^{21} 
 
 
 % if have a single appendix:
