--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,4 @@
 @book{crease_2014, place={New York}, title={The prism and the pendulum the ten most beautiful experiments in science}, publisher={Random House}, author={Crease, Robert P.}, year={2014}}
 @misc{hernandez_2019, title={The Embryo Project Encyclopedia}, url={https://embryo.asu.edu/pages/hershey-chase-experiments-1952-alfred-hershey-and-martha-chase}, journal={The Hershey-Chase Experiments (1952), by Alfred Hershey and Martha Chase | The Embryo Project Encyclopedia}, author={Hernández, Victoria}, year={2019}, month={Jun}}
 @book{johnson_2014, place={New York}, title={The ten most beautiful experiments}, publisher={Vintage Books}, author={Johnson, George}, year={2014}}
+@book{shectman_2003, place={Westport, Conn}, title={Groundbreaking scientific experiments, inventions, and discoveries of the 18th century}, publisher={Greenwood Press}, author={Shectman, Jonathan}, year={2003}}
