--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -458,7 +458,7 @@
 
 
 
-\section{Erátostenes y la circunferencia de la tierra}
+\section{Eratóstenes y la circunferencia de la tierra}
 \begin{center}
   \begin{figure}[h!]
   \includegraphics[width=55mm]{eratostenes1.jpeg}
@@ -561,7 +561,6 @@ Por esta serie de experimentos Hershey recibe el premio Nobel en 1969.\cite{hern
   \caption{Experimento Hershey-Chase. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
-  
 
 \section{Luigi Galvani: Electricidad Animal}
 
@@ -659,6 +658,126 @@ $5,97 \times 10^{24}$ kilogramos.\cite{shectman_2003}
   \end{figure}
 \end{center}
 
+
+
+
+
+
+
+
+
+
+\section{Thomas Young: La naturaleza ondulatoria de la luz}
+
+\subsection{Contexto Histórico}
+Thomas Young nació el 13 de junio de 1773 en Milverton, Inglaterra. Fue un niño prodigio, a los dos años ya leía y a los seis había leído dos veces la Biblia de principio a fin. Conocía una docena de lenguas incluidas el latín y el griego antiguo. Estudió Medicina, sin mucho éxito como médico, parte debido a su poca habilidad para reconfortar a los pacientes. Con veintiocho años abandonó la práctica médica para unirse a la Royal Institution de Londres. 
+
+Fue uno de los primeros en descifrar jeroglíficos egipcios y desempeñó un papel esencial en la descodificación de la piedra de Rosetta. También es célebre por su experimento de la doble rendija que mostraba la naturaleza ondulatoria de la luz.
+
+Young estudió la visión y el ojo humano, propuso la teoría tricromática de la visión confirmada ciento cincuenta años después. Investigó sobre el sonido, la audición y la voz humana y fue entonces cuando se preguntó si el sonido y la luz no tendrían la misma naturaleza ondulatoria.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=50mm]{thomas_young.jpg}
+  \caption{Thomas Young Davis. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+\subsection{El experimento}
+
+Su contribución fundamental al campo de la luz es el experimento de la doble rendija, considerado no sólo como uno de los experimentos más bellos de la física, sino también el experimento favorito con luz. Con este experimento Young desafió las teorías de Isaac Newton y demostró que la luz es una onda, que probaba que la luz sufre el fenómeno de las interferencias que es propio de las ondas. Entre 1801 y 1803 presentó una serie de conferencias en la Royal Society subrayando la teoría ondulatoria de la luz y añadiendo a la misma un nuevo concepto fundamental, el principio de interferencia. 
+
+El experimento de la doble rendija es simple y permitió a Thomas Young demostrar de forma convincente y por primera vez la naturaleza ondulatoria de la luz. Cuando las ondas provenientes de dos rendijas estrechas se superponen sobre una pantalla colocada a cierta distancia paralela a la línea que conecta estas rendijas, aparece en la pantalla un patrón de franjas claras y oscuras espaciadas regularmente (patrón de interferencia).
+
+Esta es la primera prueba clara de que luz más luz puede dar lugar a oscuridad. En la interferencia tiene lugar una redistribución espacial de la intensidad luminosa sin que se viole la conservación de la energía. 
+
+Este fenómeno se conoce como interferencia y con este experimento se corroboraron las ideas intuitivas de Huygens respecto al carácter ondulatorio de la luz. Thomas Young esperaba este resultado pues creía firmemente en la teoría ondulatoria de la luz y su juicio éste había sido el más importante de sus muchos logros científicos.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=70mm]{ondas_luz.jpg}
+  \caption{Ondas de Luz. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+El 12 de noviembre 1801 presentó ante la Royal Society la Bakerian Lecture titulada "On the Theory of Light and Colours" (Sobre la Teoría de la Luz y los Colores) y el 24 de noviembre de 1803 también la Bakerian Lecture "Experiments and Calculations relative to Physical Optics" (Experimentos y cálculos relativos a la óptica física).
+
+En esta última presentaba la demostración experimental de la ley general de la interferencia de la luz y una inferencia argumentativa sobre la naturaleza de la luz, concluyendo que la luz era una onda. Como todas las ondas conocidas necesitaban un medio material para su propagación, como sucede con las ondas sonoras o las ondas en el agua.
+
+Young consideró que la luz se propagaba en un medio, el éter luminífero, concluyendo que «A luminiferous Ether pervades de Universe, rare and elastic in high degree» (Un éter luminífero impregna todo el Universo, raro y elástico en alto grado) y afirmó de forma contundente que «Radiant light consists in Undulations of the luminiferous Ether» (la luz radiante consiste en ondulaciones del éter luminífero). 
+
+Asimismo señaló que la sensación de los diferentes colores depende de la distinta frecuencia de las vibraciones de la luz que excita la retina.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=70mm]{diagrama_interferencial.jpg}
+  \caption{Diagrama interferencial observado por Young. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+El experimento de las dos rendijas pone de manifiesto el proceso de interferencia óptica, nombre con que Thomas Young designó los procesos constructivos y destructivos de la composición de ondas y con el que también es conocido desde entonces.
+
+En el año 1803 casi nadie aceptó de forma inmediata las ideas de Young sobre la naturaleza de la luz. Young publicó en 1807 su magnus opus, "A Course of Lectures on Natural Philosophy and the Mechanical Arts", consistente en dos volúmenes con más de mil quinientas páginas y que fue descrito por el físico Joseph Larmor (1857-1942) como el más grande y el más original de todos los cursos publicados.
+
+Gracias a las contribuciones realizadas por Augustin Fresnel, la teoría ondulatoria de la luz –que Young demostró en su famoso experimento– fue finalmente aceptada.
+
+
+
+
+
+
+\section{Experimento 7}
+
+\subsection{Contexto Histórico}
+
+\subsection{El experimento}
+
+
+
+
+
+
+
+
+
+\section{Experimento 8}
+
+\subsection{Contexto Histórico}
+
+\subsection{El experimento}
+
+
+
+
+
+
+
+\section{Experimento 9}
+
+\subsection{Contexto Histórico}
+
+\subsection{El experimento}
+
+
+
+
+
+
+
+
+\section{Experimento 10}
+
+\subsection{Contexto Histórico}
+
+\subsection{El experimento}
+
+
+
+
+
+
+
+
 %6.6 \times 10^{21} 
 
 
@@ -724,6 +843,9 @@ $5,97 \times 10^{24}$ kilogramos.\cite{shectman_2003}
 
 
 % that's all folks
-\end{document}
 
+
+
+
+\end{document}
 
