Jean Leon Fourt: Péndulo y Rotación de la Tierra

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -725,13 +725,59 @@ Gracias a las contribuciones realizadas por Augustin Fresnel, la teoría ondulat
 
 
 
-
-\section{Experimento 7}
+\hfill \break
+\section{Jean Léon Foucault: Péndulo de Foucault}
 
 \subsection{Contexto Histórico}
 
+Jean Léon Foucault nació en Francia el 18 de septiembre de 1819. Considerado como el fundador de la moderna técnica de construcción de los grandes telescopios, trabajó en la determinación de la velocidad de la luz. Obtuvo importantes distinciones y condecoraciones en el campo de la investigación científica. Fue un físico destacado, entre otras cosas, por su famoso péndulo.
+
+Su experimento más famoso empezó en 1850, cuando observó que un péndulo permanecía oscilando en el mismo plano mientras se hacía rotar el aparato. Foucault usó entonces el péndulo para demostrar la rotación de la Tierra.
+
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=60mm]{leon_fourt.jpg}
+  \caption{Jean Léon Foucault. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+Un péndulo es algo que cuelga de un punto fijo, que cuando se suelta gira hacia abajo por la fuerza de gravedad, y luego hacia arriba por la inercia. La gravedad es una fuerza que atrae los objetos hacia el suelo, mientras que la inercia es la tendencia de un cuerpo en movimiento para continuar su movimiento a menos que actúe sobre él otra fuerza.
+
+Los péndulos son muy útiles para la ciencia, ya que sirven no sólo para medir la rotación de la Tierra, sino también para medir la aceleración debido a la gravedad, algo importante para determinar la forma de la Tierra y la distribución de los materiales dentro de ella.
+
 \subsection{El experimento}
 
+Enunció una ecuación en la que se relacionaba el período de rotación del plano con la latitud de la Tierra, en una exhibición pública, suspendió una esfera de hierro de 28 kilogramos de un cable de acero de 67 metros, desde la cúpula del Panteón en París, cuyo comportamiento vino a corroborar sus cálculos.
+
+Si se observa un péndulo, de pié y fijo a la Tierra, luego de este realizar varias oscilaciones se verá un pequeño desplazamiento del punto donde el péndulo alcanza su máxima apertura, se observará un pequeño giro del plano de oscilación del péndulo.
+
+Si nuestro planeta Tierra estuviera inmóvil en el espacio, se podría observar que el plano de oscilación del péndulo no cambia. Esta es la argumentación que usó Foucault para mostrar que su experimento finalmente demostraba la rotación de la Tierra.
+
+Considerando primero un péndulo oscilando justo en el polo Norte. Dado que el eje de rotación de la Tierra pasa por los polos, el piso rota en sentido antihorario, con respecto a las estrellas lejanas. Como el plano de oscilación del péndulo no cambia con respecto a esas estrellas, un observador fijo al suelo, verá el plano de oscilación del péndulo dar una vuelta completa en el sentido horario en ese mismo tiempo. 
+
+Por su parte, el observador fijo a la Tierra, en el polo Sur, observará que el plano de oscilación del péndulo dará una vuelta completa en el mismo tiempo pero en sentido antihorario.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=75mm]{pendulo_fourt.jpg}
+  \caption{Péndulo de Foucault. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+¿Qué sucede si se realiza el experimento justo en un punto de la línea del Ecuador?
+
+A diferencia, de lo que ocurre en los polos, en el Ecuador el eje de rotación de la Tierra es paralelo al suelo y por lo tanto el suelo no gira con respecto al eje. De esta manera el observador fijo al suelo ve al péndulo oscilar siempre en el mismo plano. Usando un péndulo sobre la Línea del Ecuador no se puede detectar la rotación de la Tierra.
+
+Ahora considerando un lugar entre el polo Sur y el Ecuador, por ejemplo alguna ubicación en Argentina. La base del péndulo, en el suelo, no es paralela ni perpendicular al eje de rotación de la Tierra, por lo tanto el suelo rotará, pero de manera más lenta que en los polos. Así, el observador fijo en la Tierra verá que el plano de oscilación del péndulo gira en sentido antihorario (porque está en el hemisferio Sur), pero tardará más tiempo en dar una vuelta completa.
+
+La descripción matemática del movimiento del péndulo en cualquier latitud es un tanto compleja. Con ella se encuentra la fórmula que determina el tiempo (en horas) que tarda el péndulo en efectuar un giro completo. Esta es:
+
+\begin{equation}
+    T=24/sen(A),
+\end{equation}
+
+en que A es la latitud donde se encuentra el péndulo. Para la latitud de Valdivia, T resulta ser aproximadamente 36 horas, de manera que el plano de oscilación gira unos 10 grados por hora.
 
 
 
@@ -740,6 +786,7 @@ Gracias a las contribuciones realizadas por Augustin Fresnel, la teoría ondulat
 
 
 
+\hfill \break
 \section{Experimento 8}
 
 \subsection{Contexto Histórico}
@@ -752,6 +799,7 @@ Gracias a las contribuciones realizadas por Augustin Fresnel, la teoría ondulat
 
 
 
+\hfill \break
 \section{Experimento 9}
 
 \subsection{Contexto Histórico}
@@ -765,6 +813,7 @@ Gracias a las contribuciones realizadas por Augustin Fresnel, la teoría ondulat
 
 
 
+\hfill \break
 \section{Experimento 10}
 
 \subsection{Contexto Histórico}
