Isaac Newton: Descomposición de la Luz

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -760,7 +760,7 @@ Por su parte, el observador fijo a la Tierra, en el polo Sur, observará que el 
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=75mm]{pendulo_fourt.jpg}
+  \includegraphics[width=70mm]{pendulo_fourt.jpg}
   \caption{Péndulo de Foucault. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
@@ -787,14 +787,73 @@ en que A es la latitud donde se encuentra el péndulo. Para la latitud de Valdiv
 
 
 \hfill \break
-\section{Experimento 8}
+\section{Isaac Newton: Descomposición de la Luz}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=60mm]{newton.jpg}
+  \caption{Isaac Newton. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
 \subsection{Contexto Histórico}
 
+Isaac Newton fue un físico y matemático inglés de los siglos XVII y XVIII (nació el 4 de enero de 1643 y murió el 31 de marzo de 1727 a los 84 años).
+
+A los 12 años comenzó a cursar sus estudios elementales en la escuela primaria de Grantham. En 1661, a los 18 años de edad, ingresó en el Trinity College de la Universidad de Cambridge para estudiar matemáticas bajo la tutela de Isaac Barrow.
+
+Tras su graduación, Newton acabaría dedicándose por completo al estudio de las matemáticas y la filosofía natural realizando descubrimientos trascendentales en el campo del cálculo (con el desarrollo del cálculo integral y diferencial, entre otros hallazgos), la física (describiendo las leyes que explican el movimiento de los cuerpos macroscópicos) y la óptica (con su teoría de los colores).
+
+En aquella época dominaba la idea de Descartes de que la luz estaba compuesta por pequeños corpúsculos. Los colores eran la mezcla de luz y oscuridad, en distintas proporciones.
+
+Antes que Newton, Descartes ya intentó descomponer la luz, pero sólo logró obtener los colores rojo y azul.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=60mm]{descartes.jpg}
+  \caption{René Descartes. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
 \subsection{El experimento}
 
+Newton empleó un par de prismas de vidrio que, por entonces, eran populares como juguetes infantiles. Así que fue un experimento muy barato. Preparó una estancia en total oscuridad. Sólo a través de un agujero en la ventana entraba un rayo de luz solar. 
 
+Colocó el prisma delante del rayo de luz, de modo que lo atravesara y reflejara la luz en la pared opuesta, a 7 metros de distancia. En la pared aparecían los colores del arco iris de forma alargada, uno sobre otro.
 
+Cabían dos posibilidades. O bien el prisma daba color a la luz, o la luz era la mezcla de todos los colores y el prisma se limitaba a descomponerla. Para comprobarlo, utilizó el segundo prisma. Tras la luz descompuesta en colores colocó otra pantalla con un agujero, a unos 3 metros. 
+
+Por este agujero fue haciendo pasar los colores de uno en uno. De modo que, detrás de la pantalla, sólo podía verse el color elegido. Por ejemplo, el rojo. Una vez aislado un color, lo hacía pasar a través del segundo prisma y lo reflejaba en otra pared.
+
+Comprobó que ahora sólo cambiaba el ángulo, pero no el color. Es decir, si habíamos aislado el rojo, al atravesar el segundo prisma seguía saliendo rojo. Y así con todos los colores. 
+
+Dedujo que los colores del arco iris eran colores puros, mientras que la luz blanca era la mezcla de todos ellos. El prisma no añadía ninguna cualidad a la luz, sino que la descomponía. Al proyectar los colores y juntarlos de nuevo, la luz volvía a ser blanca.
+
+El experimento causó sensación en la Royal Society. Newton logró descomponer la luz solar, pero siguió sin saber por qué. Entonces aún no se conocía la naturaleza ondulatoria de la luz.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=75mm]{prisma_newton.jpg}
+  \caption{Prisma de Luz, Isaac Newton. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+Para sus experimentos, Newton usó prismas triangulares de cristal. La luz penetra por una de las caras del prisma y se refracta hasta descomponerse en diferentes colores, debido a que el grado de separación varía en función de la longitud de onda de cada color. 
+
+Los prismas actúan de este modo gracias a que la luz cambia de velocidad cuando pasa del aire al cristal del prisma.
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=75mm]{arcoiris.jpg}
+  \caption{Arcoiris, luz prisma. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+Es el mismo proceso que forma el arco iris. Las gotas de agua actúan como el prisma. La luz solar se refleja en la cara interna de las gotas de lluvia y se descompone en colores.
+
+Una curiosidad: Newton estableció que la luz blanca se descomponía en siete colores. Podría haber dicho seis u otra cifra (¿alguien sabe qué clase de color es el añil?). Se debe al peso de la tradición griega en nuestra cultura europea, donde el número siete es fundamental. 
+
+De ahí que se repita tanto, incluso en los cuentos infantiles de tradición europea. Es la misma razón que llevó a Pitágoras a fijar en siete las notas musicales.
 
 
 
