Robert Andrews Millikan: Gota de Aceite y Electrones

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -760,7 +760,7 @@ Por su parte, el observador fijo a la Tierra, en el polo Sur, observará que el 
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=70mm]{pendulo_fourt.jpg}
+  \includegraphics[width=60mm]{pendulo_fourt.jpg}
   \caption{Péndulo de Foucault. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
@@ -791,7 +791,7 @@ en que A es la latitud donde se encuentra el péndulo. Para la latitud de Valdiv
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=60mm]{newton.jpg}
+  \includegraphics[width=55mm]{newton.jpg}
   \caption{Isaac Newton. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
@@ -810,10 +810,12 @@ Antes que Newton, Descartes ya intentó descomponer la luz, pero sólo logró ob
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=60mm]{descartes.jpg}
+  \includegraphics[width=50mm]{descartes.jpg}
   \caption{René Descartes. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
+
+René Descartes se educó en el colegio jesuita de La Flèche (1604-1612), por entonces uno de los más prestigiosos de Europa, donde gozó de un cierto trato de favor en atención a su delicada salud. Los estudios que en tal centro llevó a cabo tuvieron una importancia decisiva en su formación intelectual; conocida la turbulenta juventud de Descartes, sin duda en La Flèche debió cimentarse la base de su cultura. 
 
 \subsection{El experimento}
 
@@ -833,7 +835,7 @@ El experimento causó sensación en la Royal Society. Newton logró descomponer 
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=75mm]{prisma_newton.jpg}
+  \includegraphics[width=60mm]{prisma_newton.jpg}
   \caption{Prisma de Luz, Isaac Newton. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
@@ -844,7 +846,7 @@ Los prismas actúan de este modo gracias a que la luz cambia de velocidad cuando
 
 \begin{center}
   \begin{figure}[h!]
-  \includegraphics[width=75mm]{arcoiris.jpg}
+  \includegraphics[width=60mm]{arcoiris.jpg}
   \caption{Arcoiris, luz prisma. \emph{Tomado de Google Imágenes}}
   \end{figure}
 \end{center}
@@ -858,13 +860,57 @@ De ahí que se repita tanto, incluso en los cuentos infantiles de tradición eur
 
 
 
-\hfill \break
-\section{Experimento 9}
+
+
+
+
+\hfill \break\hfill \break\hfill \break\hfill \break
+\section{Robert Andrews Millikan: Gota de Aceite y Electrones}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=50mm]{millikan.jpg}
+  \caption{Robert Andrews Millikan. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
 \subsection{Contexto Histórico}
 
+Robert Andrews Millikan nació en Morrison (Illinois), estudió en las universidades de Columbia, Berlín y Gottingen. Se incorporó al cuerpo de docente de la Universidad de Chicago en 1896, en 1910 fue profesor de Física. Abandonó la universidad en 1921 al convertirse en director del laboratorio Norman Bridge de Física en el Instituto de Tecnología de California.
+
+En 1907 inició una serie de trabajos destinados a medir la carga del electrón, estudiando el efecto de los campos eléctrico y gravitatorio sobre una gota de agua (1909) y de aceite (1912), y deduciendo de sus observaciones el primer valor preciso de la constante "e". 
+
+Obtuvo además la primera determinación fotoeléctrica del cuanto de luz, verificando la ecuación fotoeléctrica de Einstein (1916), y evaluó la constante "h" de Planck.
+
+Recibió por todo ello numerosos reconocimientos, entre los que destaca el premio Nobel de Física en 1923. Realizó además estudios sobre la absorción de los rayos X, el movimiento browniano de los gases, el espectro ultravioleta y, en los últimos años de su vida, investigó la naturaleza de los rayos cósmicos, precisando la variación estacional de su intensidad con la altitud.
+
+
 \subsection{El experimento}
 
+La carga eléctrica elemental es una de las constantes fundamentales de la física, por lo que su determinación precisa resulta vital para esta ciencia. En su experimento, Millikan medía la fuerza eléctrica sobre una pequeña gota cargada debida a un campo eléctrico creado entre dos electrodos cuando la gota se encontraba en el campo gravitatorio.
+
+Conociendo el campo eléctrico, era posible llevar a cabo la determinación de la carga acumulada sobre la gota.
+
+En un principio, se creyó que la carga eléctrica debía de ser continua. Uno de los que sostenían esta opinión era Thomas Alva Edison. Sin embargo, tras el trabajo de Millikan, se convenció de lo contrario.
+
+Utilizando un atomizador formaba gotas de aceite, algunas de las cuales caían por un pequeño agujero en una región de campo eléctrico uniforme creado por dos placas paralelas cargadas. 
+
+Mediante un microscopio se podía observar una determinada gota y conocer su masa midiendo la velocidad límite de caída. Gracias a la irradiación con rayos X se cargaba la gota, y ajustando el campo eléctrico se conseguía que permaneciera en reposo, en equilibrio estático, cuando la fuerza eléctrica era igual y opuesta a la gravitatoria. 
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=95mm]{gota_aceite.jpg}
+  \caption{Esquema del aparado utilizado por Millikan para medir la carga del electrón. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+Una vez seleccionada la gota, se apaga el campo eléctrico; esta cae lentamente alcanzando rápidamente una velocidad terminal. Cuando esto sucede, significa que la fuerza de arrastre es igual y opuesta a la fuerza de la gravedad; así pues, igualando la ecuación de la fuerza de arrastre (que contiene la viscosidad, el radio de la gota supuesta esférica y la velocidad terminal) y la ecuación del peso de la gota (que continene las densidades del gas y el aceite, la constante gravitatoria y el radio al cubo), se puede extraer el radio de la gota.
+
+En este momento se vuelve a activar el campo eléctrico. Evidentemente, ajustarlo de manera que la gota quede en equilibrio sin moverse es muy complicado. Por ello, se aumentaba de manera que la gota comience a subir: en la nueva ecuación, el peso (hacia abajo) más la fuerza de arrastre (hacia abajo) son iguales a la fuerza del campo eléctrico (hacia arriba).
+
+De nuevo, alcanza otra velocidad terminal que introducida en la ecuación anterior, junto con el radio averiguado antes, proporciona la carga eléctrica de la gota.
+
+Millikan, haciendo una tarea larga y tediosa que implicó un conjunto de investigaciones colaterales, repitió el experimento numerosas veces y concluyó que los resultados obtenidos podían ser explicados si existía una carga elemental única (cuyo valor determinó) y las cargas identificadas eran múltiplos enteros de este número.
 
 
 
@@ -872,7 +918,15 @@ De ahí que se repita tanto, incluso en los cuentos infantiles de tradición eur
 
 
 
-\hfill \break
+
+
+
+
+
+
+
+
+
 \section{Experimento 10}
 
 \subsection{Contexto Histórico}
