Galileo Galilei: Plano Inclinado Gravitatorio

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -917,21 +917,73 @@ Millikan, haciendo una tarea larga y tediosa que implicó un conjunto de investi
 
 
 
+\section{Galileo Galilei: Caida de los Cuerpos, Plano Inclinado}
 
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=65mm]{galileo.jpg}
+  \caption{Galileo Galilei. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
+La revolución científica del Renacimiento tuvo su arranque en el heliocentrismo de Copérnico y su culminación, un siglo después, en la mecánica de Newton. Su más eximio representante, sin embargo, fue el científico italiano Galileo Galilei. 
 
+En el campo de la física, Galileo formuló las primeras leyes sobre el movimiento; en el de la astronomía, confirmó la teoría copernicana con sus observaciones telescópicas. Pero ninguna de estas valiosas aportaciones tendría tan trascendentales consecuencias como la introducción de la metodología experimental, logro que le ha valido la consideración de padre de la ciencia moderna.
 
-
-
-
-
-
-
-\section{Experimento 10}
 
 \subsection{Contexto Histórico}
 
+En el siglo XVII, Galileo Galilei presenta los principios del movimiento uniforme y uniformemente acelerado. Su de?nición acerca de estos tipos de movimiento es la siguiente:
+
+- Movimiento uniforme: movimiento en el cual a intervalos iguales de tiempo corresponden iguales distancias recorridas.
+- Movimiento uniformemente acelerado: movimiento en el cual variaciones iguales de velocidad ocurren en iguales intervalos de tiempo. Esto es, si el movimiento es uniforme el desplazamiento está dado por,
+
+\begin{equation}
+    x = v . t, 
+\end{equation}
+
+donde t = t2 - t1, v es la velocidad del móvil y x = x2 - x1 = x2(t2) - x1(t1).
+
+Para el movimiento uniformemente acelerado
+
+\begin{equation}
+    v = v0 + a * t
+\end{equation}
+
+donde v0 es la velocidad inicial y a la aceleración. Para este tipo de movimiento, principios matemáticos simples permiten determinar que el desplazamiento viene dado por la ecuación,
+
+\begin{equation}
+    x = x0 + v0 * t + (a / 2) * (t * t)
+\end{equation}
+
+donde x0 es la posición inicial (x(t = 0))
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=65mm]{plano_inclinado.jpg}
+  \caption{Plano Inclinado 1. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+
 \subsection{El experimento}
+
+La idea consiste en medir el tiempo que demora un cuerpo en recorrer una determinada distancia al deslizarse por un plano inclinado para luego, hacer un gráfico de distancia recorrida versus intervalo de tiempo, x versus t y de distancia recorrida versus tiempo al cuadrado, x versus t2, y verificar si el tipo de movimiento es efectivamente uniformemente acelerado.
+
+Movimiento uniformemente acelerado es aquel en el que la aceleración es constante. Galileo ya sabía que la aceleración en una caída libre de un objeto era constante, siempre que no fuera frenado por un fluido, como el aire. 
+
+Para poder estudiar mejor este movimiento utilizó esferas y planos inclinados, ya que la aceleración seguiría siendo constante, pero se reduciría de forma proporcional al ángulo usado, facilitando el estudio. Y lo más interesante, la velocidad a la que el cuerpo llegaba al suelo dependía únicamente de la altura desde la que se dejaba caer.
+
+Las ideas de Galileo revolucionaron por completo el estudio del movimiento, en particular por introducir el concepto de 'Aceleración' como un cambio de velocidad en intervalos de tiempo iguales. 
+
+Aunque no fue él quien calculó la famosa constante de aceleración originada por la gravedad de la Tierra (g = 9.8 m / (s * s)) , fue el primero en observar y demostrar matemáticamente que dicha constante existía.
+ 
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=40mm]{plano_inclinado2.jpg}
+  \caption{Plano Inclinado 2. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
 
 
