Rutherford y el núcleo atómico

--- a/tareaCorta2.tex
+++ b/tareaCorta2.tex
@@ -987,10 +987,63 @@ Aunque no fue él quien calculó la famosa constante de aceleración originada p
 
 
 
+\section{Rutherford y El Descubrimiento Del Núcleo Atómico}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=65mm]{rutherford.jpg}
+  \caption{Ernest Rutherford. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
+
+\subsection{Contexto Histórico}
+A inicios del siglo XX se conocía que la materia estaba compuesta de átomos, sin embargo saber como estaba construidos estos 
+bloques elementales era una incognita díficil de resolver, hasta que Ernest Rutherford(1871-1937) logró mediante un experimento
+descubrir la estructura interna de los átomos.
 
 
+Rutherford, nacido en Nueva Zelanda e hijo de un granjero y mecánico escocés y de una maestra británica fue un investigador brillante, estudió en los laboratorios Cavendish 
+de Cambridge y colaboró con Joseph John Thomson, famoso por descubrir el electrón e inventar el espectrómetro de masa.
 
+Entre los primeros experimentos destacados de Rutherford está el descubrimiento de que el uranio emite dos tipos distintos de radiación.
+Para demostrarlo utilizó un método simple, al envolver uranio con una o dos capas y de papel aluminio, la radiactividad disminuía, pero con tres caía de golpe, pero el efecto más curioso es que después de esta caída  abrupta y sin 
+importar la cantidad de capas extra se mantenía constante el nivel de radiación.
 
+Para nombrar estos dos tipos de radiación empleó el alfabeto griego nombrandolos rayos $\alpha$ y rayos $\beta$.
+Posteriormente pudó explicar que los rayos $\beta$ eran en realidad electrones, pero los rayos $\alpha$, que tenían una masa similar a los átomos de helio, por lo que diseñó 
+un experimento sencillo para poder analizar la naturaleza de estas partículas. 
+Con la ayuda de un frasco especial de vidrio, lo suficientemente delgado para que fuese atravesado por los rayos $\alpha$ y un contenedor al vacío colocó el frasco
+con radón conocido por emitir rayos $\alpha$. Después analizó el gas que se generó dentro del contenedor y pudó verificar que era helio.
+
+Este experimento generó ciertas inquietudes en Rutherford que posteriormente lo inclinaron a interesarse en la mecánica atómica, como por ejemplo como lograban
+las partículas de rayos $\alpha$ de carga positiva convertirse en átomos de helio que poseen una carga neutra.
+
+\subsection{El Experimento}
+
+Rutherford pidió a su asistente Hans Geiger, conocido por haber creado el contador Geiger (Medidor de radiactividad), que le ayudara a medir el factor de dispersión
+de las partículas $\alpha$ para poder determinar sus propiedades, al utilizar distintos materiales como mica y oro se dieron cuenta que algunas de estas partículas se desviaban 
+más de 90 grados. 
+
+Este hecho al principio intentó ser explicado por Rutherford mediante probabilidades e intentó explicar mediante el modelo de 
+dispersión múltiple, este comportamiento en que las partículas de rayos $\alpha$ que viajaban a más de 16 mil kilómetros por segundo podían desviarse por una
+delgada capa metálica.
+
+Entonces dedujo que la única explicación es que en realidad estas desviaciones eran producidas por una única colisión atómica y el resto de partículas seguía su trayectoría esperada.
+Este hecho le sirvió a Rutherford para determinar que la mayor parte de los átomos es en realidad espacio vacío y que el núcleo tiene que ser una pequeña parte en el centro con carga positiva 
+y los electrones que balancean esta carga haciendo la carga total del átomo neutra giran a su alrededor como satélites en un planeta.
+
+Si aumentamos el tamaño del átomo a un campo de fútbol, el núcleo, que concentra la mayor parte de la masa del átomo sería del tamaño de una mosca en el centro 
+del campo y los elctrones de carga negativa serían como motas de polvo alrededor de la  cancha.
+
+Rutherford logró así explicar la estructura interna del átomo que se creía indivisible y considerado el bloque elemental de la materia, y validando la propuesta de Hantarō Nagaoka del modelo planetario de los 
+átomos. \cite{crease_2014}
+
+\begin{center}
+  \begin{figure}[h!]
+  \includegraphics[width=40mm]{rutherford2.jpg}
+  \caption{Experimento Rutherford Núcleo Átomico. \emph{Tomado de Google Imágenes}}
+  \end{figure}
+\end{center}
 
 %6.6 \times 10^{21} 
 
